syntax = "proto3";

package pb;

import "merchant.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "api.proto";

option go_package = "github.com/MamangRust/monolith-ecommerce-shared/pb";


message FindAllMerchantAwardRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3;
}


message FindByIdMerchantAwardRequest{
    int32 id = 1;
}


message CreateMerchantAwardRequest {
    int32 merchant_id = 1;
    string title = 2;
    string description = 3;
    string issued_by = 4;
    string issue_date = 5;
    string expiry_date = 6;
    string certificate_url = 7;
}
  
 
message UpdateMerchantAwardRequest {
    int32 merchant_certification_id = 1;
    string title = 2;
    string description = 3;
    string issued_by = 4;
    string issue_date = 5;
    string expiry_date = 6;
    string certificate_url = 7;
}


message MerchantAwardResponse {
    int32 id = 1;
    int32 merchant_id = 2;
    string title = 3;
    string description = 4;
    string issued_by = 5;
    string issue_date = 6;
    string expiry_date = 7;
    string certificate_url = 8;
    string created_at = 9;
    string updated_at = 10;
    string merchant_name = 11;
}
  

message MerchantAwardResponseDeleteAt {
    int32 id = 1;
    int32 merchant_id = 2;
    string title = 3;
    string description = 4;
    string issued_by = 5;
    string issue_date = 6;
    string expiry_date = 7;
    string certificate_url = 8;
    string created_at = 9;
    string updated_at = 10;
    string merchant_name = 11;
    google.protobuf.StringValue deleted_at = 12;
}
  
message ApiResponseMerchantAward {
    string status = 1;
    string message = 2;
    MerchantAwardResponse data = 3;
}
  

message ApiResponseMerchantAwardDeleteAt {
    string status = 1;
    string message = 2;
    MerchantAwardResponseDeleteAt data = 3;
}
  

message ApiResponsesMerchantAward {
    string status = 1;
    string message = 2;
    repeated MerchantAwardResponse data = 3;
}
  

message ApiResponsePaginationMerchantAwardDeleteAt {
    string status = 1;
    string message = 2;
    repeated MerchantAwardResponseDeleteAt data = 3;
    PaginationMeta pagination = 4;
}
  

message ApiResponsePaginationMerchantAward {
    string status = 1;
    string message = 2;
    repeated MerchantAwardResponse data = 3;
    PaginationMeta pagination = 4;
}



service MerchantAwardService{
    rpc FindAll(FindAllMerchantRequest) returns (ApiResponsePaginationMerchantAward);
    rpc FindById(FindByIdMerchantAwardRequest) returns (ApiResponseMerchantAward);

    rpc FindByActive(FindAllMerchantRequest) returns (ApiResponsePaginationMerchantAwardDeleteAt) {}
    rpc FindByTrashed(FindAllMerchantRequest) returns (ApiResponsePaginationMerchantAwardDeleteAt) {}


    rpc Create(CreateMerchantAwardRequest) returns (ApiResponseMerchantAward);
    rpc Update(UpdateMerchantAwardRequest) returns (ApiResponseMerchantAward);
    rpc TrashedMerchantAward(FindByIdMerchantAwardRequest) returns (ApiResponseMerchantAwardDeleteAt);
    rpc RestoreMerchantAward(FindByIdMerchantAwardRequest) returns (ApiResponseMerchantAwardDeleteAt);
    rpc DeleteMerchantAwardPermanent(FindByIdMerchantAwardRequest) returns (ApiResponseMerchantDelete);

    rpc RestoreAllMerchantAward(google.protobuf.Empty) returns (ApiResponseMerchantAll){}
    rpc DeleteAllMerchantAwardPermanent(google.protobuf.Empty) returns (ApiResponseMerchantAll){}
}